MySqlドライバとの接続

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -351,3 +351,12 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
+
+# Default database configuration
+slick.dbs.default.driver = "slick.driver.MySQLDriver$"
+slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
+slick.dbs.default.db.url = "jdbc:mysql://localhost/kake-log-development"
+slick.dbs.default.db.user = "docker"
+slick.dbs.default.db.password = "docker"
+
+logger.root = DEBUG
