アプリケーションとデータベースの接続

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -355,7 +355,7 @@ db {
 # Default database configuration
 slick.dbs.default.driver = "slick.driver.MySQLDriver$"
 slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
-slick.dbs.default.db.url = "jdbc:mysql://localhost/kake-log-development"
+slick.dbs.default.db.url = "jdbc:mysql://192.168.99.100:3306/kakei-log-development"
 slick.dbs.default.db.user = "docker"
 slick.dbs.default.db.password = "docker"
 
