ちょっと記述を綺麗に

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -352,11 +352,12 @@ db {
   #default.logSql=true
 }
 
-# Default database configuration
-slick.dbs.default.driver = "slick.driver.MySQLDriver$"
-slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
-slick.dbs.default.db.url = "jdbc:mysql://192.168.99.100:3306/kakei_log_development"
-slick.dbs.default.db.user = "docker"
-slick.dbs.default.db.password = "docker"
+slick.dbs {
+  default.driver = "slick.driver.MySQLDriver$"
+  default.db.driver = "com.mysql.jdbc.Driver"
+  default.db.url = "jdbc:mysql://192.168.99.100:3306/kakei_log_development"
+  default.db.user = "docker"
+  default.db.password = "docker"
+}
 
 logger.root = DEBUG
