スキーマの変更

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -352,12 +352,12 @@ db {
   #default.logSql=true
 }
 
-slick.dbs.default {
-  driver = "slick.driver.MySQLDriver$"
-  db.driver = "com.mysql.jdbc.Driver"
-  db.url = "jdbc:mysql://192.168.99.100:3306/kakei_log_development"
-  db.user = "docker"
-  db.password = "docker"
+slick.dbs {
+  default.driver = "slick.driver.MySQLDriver$"
+  default.db.driver = "com.mysql.jdbc.Driver"
+  default.db.url = "jdbc:mysql://192.168.99.100:3306/kakei_log_development"
+  default.db.user = "docker"
+  default.db.password = "docker"
 }
 
 play.mailer {
