メール送信の準備

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -361,14 +361,14 @@ slick.dbs {
 }
 
 play.mailer {
-  host=localhost
-//  port=25
-//  ssl=false
-//  tls=false
-//  user=clark.kent
-//  password=superman
-//  debug=false
-//  mock=false
+  host=email-smtp.us-west-2.amazonaws.com
+  port=587
+  auth=true
+  tls=true
+  ssl=true
+  username=${?KAKEI_LOG_MAIL_USER}
+  password=${?KAKEI_LOG_MAIL_PASSWORD}
+  debug=true
 }
 
 //logger.root = DEBUG
