認証メールの送信

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -361,14 +361,13 @@ slick.dbs {
 }
 
 play.mailer {
-  host=email-smtp.us-west-2.amazonaws.com
-  port=587
-  auth=true
-  tls=true
-  ssl=true
-  username=${?KAKEI_LOG_MAIL_USER}
-  password=${?KAKEI_LOG_MAIL_PASSWORD}
-  debug=true
+  host=smtp.gmail.com
+  port=465
+  tls=yes
+  ssl=yes
+  user=${?KAKEI_LOG_GMAIL_USER}
+  password=${?KAKEI_LOG_GMAIL_PASSWORD}
+  debug=yes
 }
 
 //logger.root = DEBUG
